# SDM.SQLgeneration

./: LICENSE  README.md  generator.py  pyproject.toml  requirements.txt
api/: custom_logging.py  server.py
cli/: command.py
common/: config.json
doc/: openapi.yaml
pysmartdatamodels/: generate_SQL_schema.py
web_service/: sql_export.php  sql_export.py
